--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,5 +27,6 @@ security:
                 default_target_path: my_profile
 
     access_control:
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/my_profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
